src/objects/AcctSeed__Time_Card__c.object
<CustomObject>
    <description>Used to document the time associated with an employee for a given time card period.</description>
    <fields>
        <fullName>AcctSeed__Billable_Hours__c</fullName>
        <inlineHelpText>The total number of hours which can be billed.</inlineHelpText>
        <label>Billable Hours</label>
        <summarizedField>AcctSeed__Time_Card_Line__c.AcctSeed__Total_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Time_Card_Line__c.AcctSeed__Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Time_Card_Line__c.AcctSeed__Time_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billed_Hours__c</fullName>
        <inlineHelpText>The total number of hours which has been billed.</inlineHelpText>
        <label>Billed Hours</label>
        <summarizedField>AcctSeed__Time_Card_Line__c.AcctSeed__Total_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Time_Card_Line__c.AcctSeed__Billed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Time_Card_Line__c.AcctSeed__Time_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Day_Count__c</fullName>
        <inlineHelpText>Number of time card days associated with this record.</inlineHelpText>
        <label>Day Count</label>
        <summarizedField>AcctSeed__Time_Card_Line__c.AcctSeed__Day_Count__c</summarizedField>
        <summaryForeignKey>AcctSeed__Time_Card_Line__c.AcctSeed__Time_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Look up to Salesforce User.</inlineHelpText>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Time Cards</relationshipLabel>
        <relationshipName>Time_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>Used in approvals of Time Cards and related detail lines. A value of &quot;Posted&quot; indicates the record is final and a debit and credit line have been entered into the transaction object for each Time Card Day.</inlineHelpText>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>Waiting for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Time_Card_Period__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used for grouping of Time Card Lines. Currently only 7 day Time card periods are supported.</inlineHelpText>
        <label>Time Card Period</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>This Time Period has been Closed. Please contact your administrator to make any changes to this period.</errorMessage>
            <filterItems>
                <field>AcctSeed__Time_Card_Period__c.AcctSeed__Status__c</field>
                <operation>notEqual</operation>
                <value>Closed</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Time_Card_Period__c</referenceTo>
        <relationshipLabel>Time Cards</relationshipLabel>
        <relationshipName>Time_Cards</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Total_Hours__c</fullName>
        <inlineHelpText>Total hours recorded for all Time Card Lines for the current period.</inlineHelpText>
        <label>Total Hours</label>
        <summarizedField>AcctSeed__Time_Card_Line__c.AcctSeed__Total_Hours__c</summarizedField>
        <summaryForeignKey>AcctSeed__Time_Card_Line__c.AcctSeed__Time_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                    <default>true</default>
                    <label>Actual</label>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Unbilled_Hours__c</fullName>
        <formula>AcctSeed__Billable_Hours__c - AcctSeed__Billed_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total amount of hours which have not been billed.</inlineHelpText>
        <label>Unbilled Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Week_Ending_Date__c</fullName>
        <formula>AcctSeed__Time_Card_Period__r.AcctSeed__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The last day of the Time Card Period.</inlineHelpText>
        <label>Week Ending Date</label>
        <type>Date</type>
    </fields>
    <label>Time Card</label>
    <listViews>
        <fullName>AcctSeed__All1</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Time_Card_Period__c</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Hours__c</columns>
        <columns>AcctSeed__Billable_Hours__c</columns>
        <columns>AcctSeed__Billed_Hours__c</columns>
        <columns>AcctSeed__Unbilled_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__All_Actual</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Time_Card_Period__c</columns>
        <columns>AcctSeed__Week_Ending_Date__c</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Hours__c</columns>
        <columns>AcctSeed__Billable_Hours__c</columns>
        <columns>AcctSeed__Unbilled_Hours__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Actual</value>
        </filters>
        <label>All Actual</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__All_Budget</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Time_Card_Period__c</columns>
        <columns>AcctSeed__Week_Ending_Date__c</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Hours__c</columns>
        <columns>AcctSeed__Billable_Hours__c</columns>
        <columns>AcctSeed__Unbilled_Hours__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Budget</value>
        </filters>
        <label>All Budget</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Approved</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Time_Card_Period__c</columns>
        <columns>AcctSeed__Week_Ending_Date__c</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Total_Hours__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__In_Process</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Time_Card_Period__c</columns>
        <columns>AcctSeed__Week_Ending_Date__c</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Total_Hours__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>In Process</value>
        </filters>
        <label>In Process</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Posted</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Time_Card_Period__c</columns>
        <columns>AcctSeed__Week_Ending_Date__c</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Billable_Hours__c</columns>
        <columns>AcctSeed__Billed_Hours__c</columns>
        <columns>AcctSeed__Unbilled_Hours__c</columns>
        <columns>AcctSeed__Total_Hours__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Posted</value>
        </filters>
        <label>Posted</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Rejected</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Time_Card_Period__c</columns>
        <columns>AcctSeed__Week_Ending_Date__c</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Total_Hours__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Rejected</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Unbilled</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Time_Card_Period__c</columns>
        <columns>AcctSeed__Week_Ending_Date__c</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Hours__c</columns>
        <columns>AcctSeed__Billable_Hours__c</columns>
        <columns>AcctSeed__Billed_Hours__c</columns>
        <columns>AcctSeed__Unbilled_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Unbilled_Hours__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Unbilled</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Waiting_for_Approval</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Time_Card_Period__c</columns>
        <columns>AcctSeed__Week_Ending_Date__c</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Total_Hours__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Waiting for Approval</value>
        </filters>
        <label>Waiting for Approval</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Time Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Cards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>